@@ -9,6 +9,7 @@ require 'god/system/process'
 
 require 'god/behavior'
 require 'god/behaviors/clean_pid_file'
+require 'god/behaviors/notify_when_flapping'
 
 require 'god/condition'
 require 'god/conditions/timeline'
